--- a/.github/workflows/plugin_release_staging.yml
+++ b/.github/workflows/plugin_release_staging.yml
@@ -52,7 +52,8 @@ on:
         description: 'Check to release plugin as a prelease. Will append timestamp to end of plugin-version. Only affects staging.'
         required: true
         default: true
-  push:
+  pull_request:
+    types: [closed]
     branches:
       - develop
 
@@ -75,6 +76,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check if merged
+        id: checkIfMerged
+        run: |
+          if [[ "${{ github.event.pull_request.merged }}" == "true" ]]; then
+            echo "Pull requst has been merged. Starting release process..."
+          else
+            echo "Pull request has not been merged. Stopping workflow..."
+            exit 1
+          fi
+
       - name: Set up environment variables
         id: setUpEnvironmentVariables
         run: |
@@ -126,6 +137,14 @@ jobs:
         id: checkoutRepository
         uses: actions/checkout@v3
 
+      - name: Get Source and Target Branches
+        id: getSourceAndTargetBranches
+        run: |
+          source_branch=${{ github.head_ref }}
+          target_branch=${{ github.base_ref }}
+          export KOMAND_SOURCE_BRANCH="$source_branch"
+          export KOMAND_TARGET_BRANCH="$target_branch"
+
       - name: Setup Python
         id: setupPython
         uses: actions/setup-python@v4
@@ -150,7 +169,7 @@ jobs:
         if: always()
         run: |
           cd plugins
-          ./.ci_venv/bin/icon-ci jenkins-announce --status started --webhook_url $ICON_INTEGRATIONS_STAGING_RELEASES_ANNOUNCE_WEBHOOK
+          ../.ci_venv/bin/icon-ci jenkins-announce --status started --webhook_url $ICON_INTEGRATIONS_STAGING_RELEASES_ANNOUNCE_WEBHOOK
 
       - name: configure aws credentials for secrets manager access
         uses: aws-actions/configure-aws-credentials@v4
