--- a/.github/workflows/plugin_release_staging.yml
+++ b/.github/workflows/plugin_release_staging.yml
@@ -71,6 +71,10 @@ env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
   AWS_IAM_HOST: ${{ secrets.AWS_IAM_HOST }}
 
+permissions:
+  id_token: write
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
