--- a/.github/workflows/plugin_release.yml
+++ b/.github/workflows/plugin_release.yml
@@ -68,7 +68,7 @@ env:
   AWS_IAM_HOST: ${{ secrets.AWS_IAM_HOST }}
 
 permissions:
-  id_token: write
+  id-token: write
   contents: write
 
 jobs:
