--- a/.github/workflows/plugin_release_staging.yml
+++ b/.github/workflows/plugin_release_staging.yml
@@ -74,6 +74,7 @@ env:
 permissions:
   id-token: write
   contents: write
+  actions: read
 
 jobs:
   release:
@@ -94,13 +95,13 @@ jobs:
             exit 1
           fi
 
-       - name: Get Current Job Log URL
-          uses: Tiryoh/gha-jobid-action@v0
-          id: jobs
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            job_name: ${{ github.job }}
-          continue-on-error: true
+      - name: Get Current Job Log URL
+        uses: Tiryoh/gha-jobid-action@v0
+        id: jobs
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          job_name: ${{ github.job }}
+        continue-on-error: true
 
       - name: Set up environment variables
         id: setUpEnvironmentVariables
