PLGN-362-Adding back in get user by email action + tests

--- a/plugins/pagerduty/plugin.spec.yaml
+++ b/plugins/pagerduty/plugin.spec.yaml
@@ -297,6 +297,23 @@ actions:
         type: user
         required: false
         example: {"avatar_url": "https://secure.gravatar.com/avatar/abcABC123456abcABC123456abcABC123456.png?d=mm&r=PG","billed": true,"color": "purple","contact_methods": [{"html_url": null,"id": "ABC1234","self": "https://api.pagerduty.com/users/ABCD123/contact_methods/ABC1234","summary": "Default","type": "email_contact_method_reference"}],"coordinated_incidents": [],"description": "","email": "user1@example.com","html_url": "https://api.pagerduty.com/users/ABCD123","id": "ABCD123","invitation_sent": false,"job_title": "","name": "Test account","notification_rules": [{"html_url": null,"id": "ABC1234","self": "https://api.pagerduty.com/users/ABCD123/notification_rules/ABC1234","summary": "0 minutes: channel ABC1234","type": "assignment_notification_rule_reference"},{"html_url": null,"id": "ABC1234","self": "https://api.pagerduty.com/users/ABCD123/notification_rules/ABC1234","summary": "0 minutes: channel ABC1234","type": "assignment_notification_rule_reference"}],"role": "owner","self": "https://api.pagerduty.com/users/ABCD123","summary": "test summary","teams": [{"html_url": "https://api.pagerduty.com/teams/ABC1234","id": "ABC1234","self": "https://api.pagerduty.com/teams/ABC1234","summary": "Engineering","type": "team_reference"}],"time_zone": "Europe/London","type": "user"}
+  get_user_by_email:
+    title: Get User by Their Email Address
+    description: Get a User from using their email address
+    input:
+      user_email:
+        title: User Email
+        description: User email address
+        type: string
+        required: true
+        example: user@example.com
+    output:
+      user:
+        title: User
+        description: User
+        type: user
+        required: false
+        example: {"avatar_url": "https://secure.gravatar.com/avatar/abcABC123456abcABC123456abcABC123456.png?d=mm&r=PG","billed": true,"color": "purple","contact_methods": [{"html_url": null,"id": "ABC1234","self": "https://api.pagerduty.com/users/ABCD123/contact_methods/ABC1234","summary": "Default","type": "email_contact_method_reference"}],"coordinated_incidents": [],"description": "","email": "user1@example.com","html_url": "https://api.pagerduty.com/users/ABCD123","id": "ABCD123","invitation_sent": false,"job_title": "","name": "Test account","notification_rules": [{"html_url": null,"id": "ABC1234","self": "https://api.pagerduty.com/users/ABCD123/notification_rules/ABC1234","summary": "0 minutes: channel ABC1234","type": "assignment_notification_rule_reference"},{"html_url": null,"id": "ABC1234","self": "https://api.pagerduty.com/users/ABCD123/notification_rules/ABC1234","summary": "0 minutes: channel ABC1234","type": "assignment_notification_rule_reference"}],"role": "owner","self": "https://api.pagerduty.com/users/ABCD123","summary": "test summary","teams": [{"html_url": "https://api.pagerduty.com/teams/ABC1234","id": "ABC1234","self": "https://api.pagerduty.com/teams/ABC1234","summary": "Engineering","type": "team_reference"}],"time_zone": "Europe/London","type": "user"}
   create_user:
     title: Create User
     description: Create a User
