--- a/plugins/trendmicro_visionone/Dockerfile
+++ b/plugins/trendmicro_visionone/Dockerfile
@@ -1,29 +1,21 @@
 FROM rapid7/insightconnect-python-3-38-plugin:5
 # Refer to the following documentation for available SDK parent images: https://komand.github.io/python/sdk.html#version
 
-LABEL organization=rapid7
+LABEL organization=trendmicro
 LABEL sdk=python
 
-# Add any custom package dependencies here
-# NOTE: Add pip packages to requirements.txt
-
-# End package dependencies
-
-# Add source code
 WORKDIR /python/src
-ADD ./plugin.spec.yaml /plugin.spec.yaml
-ADD . /python/src
 
-# Install pip dependencies
+ADD ./plugin.spec.yaml /plugin.spec.yaml
+ADD ./requirements.txt /python/src/requirements.txt
+
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-# Install plugin
-RUN python setup.py build && python setup.py install
+ADD . /python/src
+
+RUN	python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
 USER nobody
 
-# Uncomment next 2 lines for unit testing 
-# ENTRYPOINT ["/bin/sh"]
-# CMD ["-c", "/usr/local/bin/python /app/__init__.py"]
 ENTRYPOINT ["/usr/local/bin/icon_trendmicro_visionone"]
