--- a/plugins/mimecast/plugin.spec.yaml
+++ b/plugins/mimecast/plugin.spec.yaml
@@ -5,7 +5,7 @@ name: mimecast
 title: Mimecast
 description: Services for email security, archiving and continuity. Protect, manage
   and archive without compromise
-version: 5.3.1
+version: 5.3.2
 connection_version: 5
 supported_versions: ["Mimecast API 2022-11-07"]
 vendor: rapid7
@@ -847,6 +847,8 @@ connection:
       - AU
       - Offshore
       - Sandbox
+      - USB
+      - USBCOM
     required: true
     example: EU
     default: EU
@@ -1491,13 +1493,6 @@ tasks:
   monitor_siem_logs:
     title: Monitor SIEM Logs
     description: Monitor and retrieve the latest logs
-    input:
-      token:
-        title: Token
-        description: Used to request the next available log file
-        type: string
-        required: false
-        example: 9de5069c5afe602b2ea0a04b66beb2c0
     output:
       data:
         title: Data
